2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2031407:
    * source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
    (createStackedValueList): Encode series with negative values using -1 
    offset,
    (drawStackHorizontal): Account for -1 offset,
    (drawStackVertical): Likewise.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2033721:
    * source/org/jfree/chart/renderer/WaferMapRenderer.java
    (getLegendCollection): Use lookupSeriesPaint.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2051168:
    * source/org/jfree/chart/plot/PiePlot.java
    (getLegendItems): Populate with series key and index.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartFactory.java:
    (currentTheme): New field,
    (getChartTheme): New method,
    (setChartTheme): Likewise,
    ...and applied current theme in all chart creation methods,
    * source/org/jfree/chart/ChartTheme.java: New file,
    * source/org/jfree/chart/ChartUtilities.java
    (applyCurrentTheme): New method,
    * source/org/jfree/chart/StandardChartTheme.java: New file.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (DEFAULT_MAXIMUM_DRAW_WIDTH): Increased to 1024,
    (DEFAULT_MAXIMUM_DRAW_HEIGHT): Increased to 768.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/GradientBarPainter.java
    (paintBar): Use outline paint,
    (paintBarShadow): Use shadow paint,
    * source/org/jfree/chart/renderer/category/StandardBarPainter.java
    (paintBarShadow): Use shadow paint.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (clearSeriesPaints): New method,
    (clearSeriesStrokes): Likewise.

2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
