@@ -1,3 +1,8 @@
+2008-09-01  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/renderer/xy/XYDotRenderer.java
+    (drawItem): Check for item visibility.
+
 2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
 
     Bug 2031407:
